--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,17 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-	"editor.tabSize": 2,
+  "editor.tabSize": 2,
   "editor.formatOnSave": true,
-	"editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
   },
-	"javascript.format.enable": false,
-	"eslint.alwaysShowStatus": true,
-	"files.autoSave": "onFocusChange"
+  "javascript.format.enable": false,
+  "eslint.alwaysShowStatus": true,
+  "files.autoSave": "onFocusChange",
+
+  "eslint.workingDirectories": [
+    {
+      "mode": "auto" // Working directory based on the location of package.json, .eslintignore and .eslintrc* files
+    }
+  ]
 }
