--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "react": "^17.0.2",
+    "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "react-select": "^5.0.0",
     "styled-components": "^5.3.1",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
