--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "axios": "^0.21.4",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.4",
+    "antd": "^4.16.13",
     "react": "^17.0.2",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
+    "slick-carousel": "^1.8.1",
+    "react-select": "^5.0.0",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
-    "react-select": "^5.0.0",
     "styled-components": "^5.3.1",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
